# cmake-template

./: .gitignore  CMakeLists.txt  README.MD  make.sh
.github/workflows/: c-cpp.yml  cmake-multi-platform.yml  main.yml
cmake/: android.cmake  ios.cmake  platform.cmake
include/: README.MD
libs/: README.MD
libs/source/: libuv.cmake
projects/: README.MD
projects/android/app/: build.gradle.kts
projects/android/app/src/androidTest/java/io/github/byhook/android/: ExampleInstrumentedTest.kt
projects/android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
projects/android/app/src/main/java/io/github/byhook/android/: MainActivity.kt
projects/android/app/src/test/java/io/github/byhook/android/: ExampleUnitTest.kt
projects/android/gradle/: libs.versions.toml
projects/android/gradle/wrapper/: gradle-wrapper.properties
src/: README.MD
src/common/: common.h
src/platform/linux/: platform.h
